# internal/dashboard/generated/swagger/swagger.yaml
@@ -974,7 +974,7 @@ definitions:
       version:
         type: string
     type: object
-  response.OBClusterBrief:
+  response.OBClusterOverview:
     properties:
       clusterId:
         type: integer
@@ -1074,48 +1074,6 @@ definitions:
       sysLogStorage:
         $ref: '#/definitions/response.StorageSpec'
     type: object
-  response.OBTenantBrief:
-    description: Brief information about OBTenant
-    properties:
-      charset:
-        description: Charset of the tenant
-        type: string
-      clusterResourceName:
-        description: Name of the cluster belonging to
-        type: string
-      createTime:
-        description: Creation time of the tenant
-        type: string
-      locality:
-        description: Locality of the tenant units
-        type: string
-      name:
-        description: Name of the resource
-        type: string
-      namespace:
-        description: Namespace of the resource
-        type: string
-      primaryZone:
-        description: Primary zone of the tenant
-        type: string
-      status:
-        description: Status of the tenant
-        type: string
-      tenantName:
-        description: Name of the tenant in the database
-        type: string
-      tenantRole:
-        description: 'Enum: Primary, Standby'
-        type: string
-      topology:
-        description: Topology of the tenant
-        items:
-          $ref: '#/definitions/response.OBTenantReplica'
-        type: array
-      unitNumber:
-        description: Number of units in every zone
-        type: integer
-    type: object
   response.OBTenantDetail:
     properties:
       charset:
@@ -1166,6 +1124,48 @@ definitions:
         type: integer
       version:
         type: string
+    type: object
+  response.OBTenantOverview:
+    description: Brief information about OBTenant
+    properties:
+      charset:
+        description: Charset of the tenant
+        type: string
+      clusterResourceName:
+        description: Name of the cluster belonging to
+        type: string
+      createTime:
+        description: Creation time of the tenant
+        type: string
+      locality:
+        description: Locality of the tenant units
+        type: string
+      name:
+        description: Name of the resource
+        type: string
+      namespace:
+        description: Namespace of the resource
+        type: string
+      primaryZone:
+        description: Primary zone of the tenant
+        type: string
+      status:
+        description: Status of the tenant
+        type: string
+      tenantName:
+        description: Name of the tenant in the database
+        type: string
+      tenantRole:
+        description: 'Enum: Primary, Standby'
+        type: string
+      topology:
+        description: Topology of the tenant
+        items:
+          $ref: '#/definitions/response.OBTenantReplica'
+        type: array
+      unitNumber:
+        description: Number of units in every zone
+        type: integer
     type: object
   response.OBTenantReplica:
     properties:
@@ -1750,7 +1750,7 @@ paths:
             - properties:
                 data:
                   items:
-                    $ref: '#/definitions/response.OBClusterBrief'
+                    $ref: '#/definitions/response.OBClusterOverview'
                   type: array
               type: object
         "400":
@@ -2186,7 +2186,7 @@ paths:
             - properties:
                 data:
                   items:
-                    $ref: '#/definitions/response.OBTenantBrief'
+                    $ref: '#/definitions/response.OBTenantOverview'
                   type: array
               type: object
         "400":
